# langchain-docker

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  demo.db  docker-compose.yml  pyproject.toml
chainlit_app/: app.py  chainlit.md  utils.py
chainlit_app/.chainlit/: config.toml
docs/: BEDROCK.md  GRAPH_RAG_SCHEMA.md  JIRA_TOOLS.md  LIGHTHOUSE_CLI_GUIDE.md  SKILLS_ARCHITECTURE.md
logs/: schema_insights.jsonl
scripts/: schema_discovery.py
src/langchain_docker/: __init__.py  __main__.py  cli.py
src/langchain_docker/api/: __init__.py  app.py  dependencies.py  mcp_servers.json  middleware.py
src/langchain_docker/api/routers/: agents.py  approvals.py  capabilities.py  chat.py  knowledge_base.py  mcp.py  models.py  sessions.py  skills.py  workspace.py
src/langchain_docker/api/schemas/: agents.py  approvals.py  capabilities.py  chat.py  knowledge_base.py  mcp.py  models.py  sessions.py  skills.py
src/langchain_docker/api/services/: agent_serializer.py  agent_service.py  approval_service.py  capability_registry.py  chat_service.py  demo_database.py  docling_processor.py  document_processor.py  embedding_service.py  graph_rag_service.py  hitl_tool_wrapper.py  knowledge_base_service.py  mcp_server_manager.py  mcp_tool_service.py  memory_service.py  model_service.py  opensearch_store.py  redis_agent_store.py  redis_session_store.py  redis_skill_store.py  scheduler_service.py  schema_insights.py  session_serializer.py  session_service.py  skill_registry.py  skill_serializer.py  tool_registry.py  versioned_skill.py  workspace_service.py
src/langchain_docker/core/: __init__.py  config.py  demo_data.py  models.py  tracing.py
src/langchain_docker/examples/: __init__.py  agent_basics.py  basic_invocation.py  model_customization.py  multi_provider.py  streaming.py
src/langchain_docker/skills/: __init__.py
src/langchain_docker/skills/chrome_perf_analyzer/: SKILL.md
src/langchain_docker/skills/jira/: SKILL.md  __init__.py  jql_reference.md
src/langchain_docker/skills/kb_ingest/: SKILL.md
src/langchain_docker/skills/knowledge_base/: SKILL.md
src/langchain_docker/skills/lighthouse/: SKILL.md
src/langchain_docker/skills/middleware/: __init__.py  gated_domain_tools.py  middleware.py  registry.py  state.py  tools.py
src/langchain_docker/skills/sql/: SKILL.md  __init__.py  anti_patterns.md  dialect_reference.md  examples.md  patterns.md
src/langchain_docker/skills/web_performance/: SKILL.md
src/langchain_docker/skills/xlsx/: SKILL.md  __init__.py  examples.md  formatting.md  recalc.md
src/langchain_docker/utils/: __init__.py  errors.py
tests/: __init__.py
tests/skills/: __init__.py  test_middleware.py
web_ui/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
web_ui/src/: App.tsx  index.css
web_ui/src/api/: agents.ts  approvals.ts  capabilities.ts  chat.ts  client.ts  index.ts  knowledgeBase.ts  mcp.ts  models.ts  sessions.ts  skills.ts  workspace.ts
web_ui/src/components/chat/: ApprovalCard.tsx  ChatSettingsBar.tsx  ChatSettingsPanel.tsx  FollowUpSuggestions.tsx  ImageUpload.tsx  StarterPrompts.tsx  WorkspacePanel.tsx  index.ts
web_ui/src/components/layout/: Header.tsx  MainLayout.tsx
web_ui/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  (+10 more)
web_ui/src/hooks/: useImageUpload.ts
web_ui/src/stores/: index.ts  knowledgeBaseStore.ts  mcpStore.ts  sessionStore.ts  settingsStore.ts  skillStore.ts  userStore.ts  workspaceStore.ts
web_ui/src/types/: api.ts
(+28 files in other folders)
