[project]
name = "langchain-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "srsubramanian", email = "subramanian_psg@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.9.3",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.4",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
langchain-docker = "langchain_docker:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
