[project]
name = "langchain-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "srsubramanian", email = "subramanian_psg@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "arize-phoenix>=12.25.1",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "langchain-docling>=0.1.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-aws>=0.2.8",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-redis>=0.3.2",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.5.0",
    "openinference-instrumentation-langchain>=0.1.56",
    "opensearch-py>=2.4.0",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=3.0.4",
    "uvicorn[standard]>=0.40.0",
    # LlamaIndex GraphRAG dependencies
    "llama-index-core>=0.12.0",
    "llama-index-graph-stores-neo4j>=0.4.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-embeddings-openai>=0.3.0",
    # LlamaIndex Bedrock support for GraphRAG
    "llama-index-llms-bedrock-converse>=0.2.0",
    "llama-index-embeddings-bedrock>=0.3.0",
    "neo4j>=5.15.0",
]

[project.scripts]
langchain-docker = "langchain_docker:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
